markers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markers
  namespace: linguist-system-backend
  labels:
    app: markers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markers
  template:
    metadata:
      labels:
        app: markers
    spec:
      containers:
        - name: markers-container
          image: markers
          resources:
            limits:
              memory: 2000Mi
              cpu: 2
            requests:
              memory: 1000Mi
              cpu: 1
          ports:
            - containerPort: 8066
      imagePullSecrets:
        - name: reg-sample
