markers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markers
  namespace: linguist-system-backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.linguist.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: markers
                port:
                  number: 0866
  tls:
    - hosts:
        - api.linguist.ru
      secretName: linguist.ru
